--- a/SimpleNotebook.ipynb
+++ b/SimpleNotebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,15 +106,68 @@
     "}\n",
     "\n",
     "# Function to get target v\n",
-    "def generate_target_v(alpha, VT, beta, y0, this_rtol, this_atol, regularizedFlag):\n",
+    "def generate_target_v(alpha, VT, beta, y0, this_rtol, this_atol, regularizedFlag, solver):\n",
     "    # y0[1] = alpha[2]\n",
     "    targ_SpringSlider = MassFricParams(alpha, VT, beta, y0)\n",
     "    targ_SpringSlider.print_info()\n",
     "    targ_seq = TimeSequenceGen(T, NofTPts, targ_SpringSlider, \n",
-    "                               rtol=this_rtol, atol=this_atol, regularizedFlag=regularizedFlag)\n",
-    "    v = targ_seq.default_y[1, :], \n",
+    "                               this_rtol, this_atol, regularizedFlag, solver)\n",
+    "    v = targ_seq.default_y, \n",
     "    t = targ_seq.t\n",
-    "    return v[0], t"
+    "    return v, t\n",
+    "\n",
+    "vv, tt = generate_target_v(alpha0, VT, beta_targ, y0, this_rtol, this_atol, regularizedFlag, 'dopri5')\n",
+    "vv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------  Mass and spring parameters  --------------------\n",
+      "k:         tensor(50.)\n",
+      "m:         tensor(1.)\n",
+      "g:         tensor(9.8000)\n",
+      "\n",
+      "\n",
+      "--------------------  Rate-and-state parameters  --------------------\n",
+      "fr:        tensor(0.5800)\n",
+      "a:         tensor(0.0110)\n",
+      "b:         tensor(0.0160)\n",
+      "1 / DRS:       tensor(1.)\n",
+      "y0:        tensor([0., 1., 1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "vv, tt = generate_target_v(alpha0, VT, beta_targ, y0, this_rtol, this_atol, regularizedFlag, 'dopri5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.0000, 0.0049, 0.0098,  ..., 4.8313, 4.8379, 4.8447],\n",
+       "         [1.0000, 0.9750, 0.9499,  ..., 1.3268, 1.3411, 1.3550],\n",
+       "         [1.0000, 1.0001, 1.0002,  ..., 1.0551, 1.0530, 1.0509]]),)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vv"
    ]
   },
   {
@@ -283,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
