--- a/SimpleNotebook.ipynb
+++ b/SimpleNotebook.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shengduo/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "## Import standard librarys\n",
     "import torch\n",
@@ -35,6 +44,89 @@
     "from GradientDescent import GradDescent, objGradFunc\n",
     "\n",
     "torch.set_default_dtype(torch.float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate steady state friction coefficient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beta_targ = torch.tensor([0.011, 0.016, 0.1, 0.58])\n",
+    "beta = torch.tensor([ 0.0111, -0.0027,  0.1000,  0.2810])\n",
+    "V = torch.tensor([1., 10., 100.])\n",
+    "\n",
+    "# Calculate stead state\n",
+    "def calFSS(beta, V):\n",
+    "    res = beta[3] + (beta[0] - beta[1]) * torch.log(V / 1.e-6)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Allocate memory\n",
+    "res = torch.zeros(len(tts), 2, self.kwgs['NofTpts'])\n",
+    "for idx, (tt, VV) in enumerate(zip(tts, VVs)):\n",
+    "    T = torch.linspace(tt[0], tt[-1], self.kwgs['NofTpts'])\n",
+    "    InterpFunc = interp1d(tt, VV)\n",
+    "    V = torch.tensor(InterpFunc(T), dtype = torch.float)\n",
+    "    res[idx, 1, :] = V\n",
+    "    res[idx, 0, :] = T\n",
+    "    \n",
+    "# Update self.tt, self.VV\n",
+    "self.tts = tts\n",
+    "self.VVs = VVs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.5109, 0.4994, 0.4879])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calFSS(beta_targ, V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.4717, 0.5034, 0.5352])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calFSS(beta, V)"
    ]
   },
   {
@@ -283,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
