--- a/SimpleNotebook.ipynb
+++ b/SimpleNotebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,49 @@
     "def calFSS(beta, V):\n",
     "    res = beta[3] + (beta[0] - beta[1]) * torch.log(V / 1.e-6)\n",
     "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1,  4, 12, 32],\n",
+       "        [ 2,  8, 18, 20]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.tensor([1, 2, 3, 4,])\n",
+    "b = torch.tensor([[1, 2, 4, 8], [2, 4, 6, 5]])\n",
+    "a * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(V.size())"
    ]
   },
   {
