Added alternating gradient.

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -46,6 +46,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.io import savemat\n",
+    "kwgs = torch.load('./plots/FricSeqGen_Plot2Params_ab/kwgs.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param1s = kwgs['param1s'].numpy()\n",
+    "param2s = kwgs['param2s'].numpy()\n",
+    "AllOs = kwgs['AllOs'].numpy()\n",
+    "\n",
+    "mdic = {\n",
+    "    \"param1s\" : param1s, \n",
+    "    \"param2s\" : param2s, \n",
+    "    \"AllOs\" : AllOs,\n",
+    "    }\n",
+    "\n",
+    "savemat('./plots/FricSeqGen_Plot2Params_ab/res.mat', mdic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2000, 0.5000, 0.8000],\n",
+       "        [0.2000, 0.5000, 0.8000],\n",
+       "        [0.2000, 0.5000, 0.8000]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kwgs['param2s']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[22.0922,  2.0232,  3.5542],\n",
+       "        [17.3280,  0.7680,  5.8080],\n",
+       "        [16.8732,  0.6850,  6.0969]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kwgs['AllOs']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
